--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.RandomTodayLaunch" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#8B95F8</item>
+        <item name="colorPrimary">#4354F1</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -24,6 +24,11 @@
         <item name="fontFamily">@font/context</item>
     </style>
 `
+    <style name="AppBarFont" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="fontFamily">@font/context</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="Theme.RandomTodayLaunch.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.RandomTodayLaunch.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
