--- a/app/src/main/res/menu/menu_result.xml
+++ b/app/src/main/res/menu/menu_result.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.randomtodaylaunch.ui.MainActivity">
+    tools:context="com.hoya.randomtodaylaunch.com.hoya.randomtodaylaunch.ui.MainActivity">
     <item
         android:id="@+id/action_mail"
         android:title="mail"
