--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -17,20 +17,16 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:orientation="vertical">
-
             <TextView
                 android:id="@+id/item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:hint="name"
                 android:text="@{food.name}"
-                android:textColor="@color/black"
-                android:textSize="15sp" />
+                android:textColor="@color/main"
+                android:textSize="17sp"
+                android:fontFamily="@font/context"/>
 
             <TextView
                 android:id="@+id/item_type"
@@ -38,10 +34,9 @@
                 android:layout_height="wrap_content"
                 android:hint="type"
                 android:text="@{food.type}"
-                android:textColor="@color/black"
-                android:textSize="15sp" />
-
-        </LinearLayout>
+                android:textColor="@color/main"
+                android:textSize="17sp"
+                android:fontFamily="@font/context"/>
 
     </LinearLayout>
 </layout>
