--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,6 +29,12 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="TabLayoutFont" parent="@android:style/TextAppearance.Widget.TabWidget">
+        <item name="fontFamily">@font/context</item>
+<!--        <item name="android:textColor">@color/white</item>-->
+    </style>
+
+
     <style name="Theme.RandomTodayLaunch.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.RandomTodayLaunch.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
