--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -151,7 +151,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/context"
             android:layout_marginTop="10dp"
-            android:visibility="visible"
+            android:visibility="gone"
             android:text="전체보기"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -167,7 +167,7 @@
             android:textSize="11sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/listBtn" />
+            app:layout_constraintTop_toBottomOf="@+id/anyBtn" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
