refactor : add Repository pattern
* Repository를 추가하여 ViewModel에서 직접적으로 데이터를 관리하지 않게 리팩터링 하였음.

--- a/app/src/main/res/layout/item_menu_list.xml
+++ b/app/src/main/res/layout/item_menu_list.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="item"
-            type="com.hoya.randomtodaylaunch.model.MenuEntity" />
+            type="com.hoya.randomtodaylaunch.data.entity.MenuEntity" />
 
     </data>
 
