--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="food"
-            type="com.hoya.randomtodaylaunch.model.FoodEntity" />
+            type="com.hoya.randomtodaylaunch.data.entity.FoodEntity" />
 
     </data>
 
